<resources>
    <string name="app_name">Kikk</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--controller-->
    <string name="network_error">网络出错了，请待会再试吧！</string>
    <string name="empty_warning">暂时没有数据吆</string>
    <string name="hide_danmaku">hide</string>
    <string name="show_danmaku">show</string>
    <string name="pause_danmaku">pause</string>
    <string name="resume_danmaku">resume</string>
    <string name="send_danmaku">发送一条(纯文字)</string>
    <string name="send_danmaku_image_text">发送一条(图文)</string>
    <string name="send_danmakus">定时发送</string>
    <string name="cancel_sending_danmakus">取消定时</string>
    <string name="release">release</string>
    <string name="rotate">旋转屏幕</string>

    <string name="username_hint">请输入手机号码</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="find_password">找回密码</string>
    <string name="try_now">注册</string>
    <string name="input_name">请输入电话号码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_error">用户名或密码错误</string>

    <string name="hsp_setting">设置</string>
    <string name="about_huaqian">关于</string>
    <string name="quit">退出</string>

    <!-- my account text -->
    <string name="my_account_activity_label">我的账户</string>
    <string name="nickname">昵称</string>
    <string name="telephone_no">手机号</string>
    <string name="recommendation_code">邀请码</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="modify_password">修改密码</string>
    <string name="quit_login">退出登录</string>
    <string name="you_not_bound_phone_yet">您还没有绑定手机号</string>
    <string name="me_no_nick_name">朋友</string>

    <!-- gender setting text -->
    <string name="gender_setting_activity_label">设置性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <!-- birthday setting text -->
    <string name="please_choose_your_birthday">请选择您的生日</string>
    <string name="cancel">取消</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hint_new_nickname">请输入您的新昵称</string>
    <string name="common_string_submit">提交</string>
    <string name="common_string_wait_notice">正在提交，请稍后&#8230;</string>

    <string name="hint_old_password">请输入旧密码</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="hint_again_new_password">请确认新密码</string>
    <string name="modify_old_password_hint">请输旧的密码</string>
    <string name="modify_new_password_hint">请输入新密码</string>
    <string name="modify_confirm_password_hint">请输入确认密码</string>
    <string name="two_password">您两次密码输入不一致</string>

    <!-- browser-->
    <string name="browser_more">更多</string>
    <string name="browser_share_to">分享到</string>
    <string name="browser_share_to_wechat">微信好友</string>
    <string name="browser_share_to_moments">朋友圈</string>
    <string name="browser_share_to_qq_zone">QQ空间</string>
    <string name="browser_open_in_browser_outside">浏览器打开</string>
    <string name="browser_more_forward">前进</string>
    <string name="browser_more_backward">后退</string>
    <string name="browser_more_refresh">刷新</string>
    <string name="browser_more_blank">空白</string>
    <string name="me_app_direction">玩转Kikk</string>
    <string name="me_app_desc">Kikk</string>

</resources>
