<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/browser_pop_window_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/browser_share_title_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/browser_share_to"
            android:textColor="@color/browser_pop_window_title_txt_color"
            android:textSize="@dimen/browser_share_title_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/browser_more_share_operation_layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/open_in_browser_outside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/browser_open_in_browser_outside"
            android:textSize="@dimen/browser_share_icon_text_size"
            android:drawablePadding="@dimen/browser_more_share_icon_spacing"
            android:drawableTop="@drawable/browser_icon_open_outside_browser" />

        <TextView
            android:id="@+id/share_to_wechat_moments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/browser_share_to_moments"
            android:textSize="@dimen/browser_share_icon_text_size"
            android:drawablePadding="@dimen/browser_more_share_icon_spacing"
            android:drawableTop="@drawable/browser_icon_share_moments" />

        <TextView
            android:id="@+id/share_to_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/browser_share_to_wechat"
            android:textSize="@dimen/browser_share_icon_text_size"
            android:drawablePadding="@dimen/browser_more_share_icon_spacing"
            android:drawableTop="@drawable/browser_icon_share_wechat" />

        <TextView
            android:id="@+id/share_to_qq_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/browser_share_to_qq_zone"
            android:textSize="@dimen/browser_share_icon_text_size"
            android:drawablePadding="@dimen/browser_more_share_icon_spacing"
            android:drawableTop="@drawable/browser_icon_share_qq_zone" />

    </LinearLayout>

    <View
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/browser_popup_window_divider_height"
        android:layout_width="@dimen/browser_popup_window_divider_width"
        android:background="@color/browser_pop_window_divider_bg"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/browser_more_share_operation_layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/browser_backward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/browser_more_backward"
            android:textSize="@dimen/browser_share_icon_text_size"
            android:drawablePadding="@dimen/browser_more_share_icon_spacing"
            android:drawableTop="@drawable/browser_icon_backward_enable" />

        <TextView
            android:id="@+id/browser_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/browser_more_forward"
            android:textSize="@dimen/browser_share_icon_text_size"
            android:drawablePadding="@dimen/browser_more_share_icon_spacing"
            android:drawableTop="@drawable/browser_icon_forward_enable" />

        <TextView
            android:id="@+id/browser_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/browser_more_refresh"
            android:textSize="@dimen/browser_share_icon_text_size"
            android:drawablePadding="@dimen/browser_more_share_icon_spacing"
            android:drawableTop="@drawable/browser_icon_refresh" />

        <TextView
            android:id="@+id/blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/browser_more_blank"
            android:textSize="@dimen/browser_share_icon_text_size"
            android:drawablePadding="@dimen/browser_more_share_icon_spacing"
            android:drawableTop="@drawable/browser_icon_share_qq_zone"
            android:visibility="invisible" />

    </LinearLayout>


</LinearLayout>