<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/choose_msg_type_title_text_layout_padding_left"
    android:layout_marginRight="@dimen/choose_msg_type_title_text_layout_padding_right"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/dialog_content_header"
        android:gravity="center_vertical" >

        <TextView
            style="@style/dialog_text_title_large"
            android:gravity="center"
            android:text="@string/please_choose_your_birthday" />
    </RelativeLayout>

    <View style="@style/custom_divider_short"
        android:layout_marginLeft="@dimen/custom_dialog_birthday_divider_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/custom_dialog_content_body_minHeight"
        android:background="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/divider_layout_margin_left"
        android:layout_marginRight="@dimen/divider_margin_right"
        android:layout_marginTop="@dimen/divider_margin_top"
        android:layout_marginBottom="@dimen/divider_margin_bottom"
        android:orientation="horizontal" >

        <com.ye.player.widget.wheelwidget.WheelView
            android:id="@+id/birthday_dialog_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null" >
        </com.ye.player.widget.wheelwidget.WheelView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/year" />

        <com.ye.player.widget.wheelwidget.WheelView
            android:id="@+id/birthday_dialog_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" >
        </com.ye.player.widget.wheelwidget.WheelView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/month" />

        <com.ye.player.widget.wheelwidget.WheelView
            android:id="@+id/birthday_dialog_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" >
        </com.ye.player.widget.wheelwidget.WheelView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/day" />
    </LinearLayout>

    <LinearLayout
        style="@style/dialog_content_footer"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/birthday_dialog_btn_cancel"
            style="@style/button_white_short"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/red_shop" />

        <Button
            android:id="@+id/birthday_dialog_btn_confirm"
            style="@style/button_red_short"
            android:layout_width="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text="确定" />
    </LinearLayout>


</LinearLayout>