<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/navi_bar_height">

    <View
        style="@style/new_setting_line"
        android:layout_marginTop="@dimen/setting_relative_layout_margin_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingRight="@dimen/setting_relative_layout_item_padding">

        <EditText
            android:id="@+id/modify_old_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_set_new_modify_password_edit_height"
            android:layout_marginLeft="@dimen/activity_set_new_modify_password_edit_margin_left"
            android:layout_marginRight="@dimen/activity_set_new_modify_password_edit_margin_right"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_old_password"
            android:inputType="textPassword"
            android:textColor="#4c4c4c"
            android:textColorHint="@color/grey_setting_right_note"
            android:textSize="@dimen/activity_modify_nickname_edit_text_size" />

        <View style="@style/new_setting_divider_left" />

        <EditText
            android:id="@+id/modify_new_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_set_new_modify_password_edit_height"
            android:layout_marginLeft="@dimen/activity_set_new_modify_password_edit_margin_left"
            android:layout_marginRight="@dimen/activity_set_new_modify_password_edit_margin_right"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:textColor="#4c4c4c"
            android:textColorHint="@color/grey_setting_right_note"
            android:textSize="@dimen/activity_modify_nickname_edit_text_size" />

        <View style="@style/new_setting_divider_left" />

        <EditText
            android:id="@+id/modify_confirm_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_set_new_modify_password_edit_height"
            android:layout_marginLeft="@dimen/activity_set_new_modify_password_edit_margin_left"
            android:layout_marginRight="@dimen/activity_set_new_modify_password_edit_margin_right"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_again_new_password"
            android:inputType="textPassword"
            android:textColor="#4c4c4c"
            android:textColorHint="@color/grey_setting_right_note"
            android:textSize="@dimen/activity_modify_nickname_edit_text_size" />
    </LinearLayout>

    <View style="@style/new_setting_line" />

    <Button
        android:id="@+id/modify_new_password_button"
        style="@style/button_red_long"
        android:text="@string/common_string_submit"
        android:visibility="gone" />

</LinearLayout>