<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:layout_marginTop="@dimen/navi_bar_height">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/setting_rl_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_relative_layout_icon_height"
            android:layout_marginTop="@dimen/setting_relative_layout_margin_top"
            android:background="@drawable/common_item_press_style"
            android:paddingLeft="@dimen/setting_relative_layout_item_padding"
            android:paddingRight="@dimen/setting_relative_layout_item_padding">

            <ImageView
                android:id="@+id/setting_tv_my_account_arrow"
                style="@style/new_setting_img_arrow" />

            <ImageView
                android:id="@+id/setting_account_new_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/notice_dot_margin"
                android:layout_marginRight="@dimen/notice_dot_margin"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/setting_grey_text_drawable_padding"
                android:layout_toRightOf="@+id/imageView"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="暂未设置昵称"
                    android:textColor="@color/invite_title_text_color"
                    android:textSize="@dimen/setting_grey_text_size" />

                <TextView
                    android:id="@+id/text_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/invite_page_invite_rules_line_margin_top"
                    android:text="暂未绑定手机号"
                    android:textColor="@color/invite_title_text_color"
                    android:textSize="@dimen/setting_grey_text_text_size" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting_rl_lock"
            android:layout_marginTop="@dimen/setting_relative_layout_margin_top"
            style="@style/new_setting_relative_layout_item">

            <TextView
                style="@style/new_setting_grey_text"
                android:drawableLeft="@drawable/icon_suoping"
                android:text="@string/hsp_setting" />

            <ImageView style="@style/new_setting_img_arrow" />

        </RelativeLayout>

        <View style="@style/new_setting_divider_left" />

        <RelativeLayout
            android:id="@+id/about"
            style="@style/new_setting_relative_layout_item">

            <TextView
                android:id="@+id/setting_tv_about_huaqian"
                style="@style/new_setting_grey_text"
                android:drawableLeft="@drawable/icon_guanyu"
                android:drawableStart="@drawable/icon_guanyu"
                android:text="@string/about_huaqian" />

            <ImageView
                android:id="@+id/about_huaqian_image"
                style="@style/new_setting_img_arrow" />

        </RelativeLayout>

        <View style="@style/new_setting_divider_left" />

        <RelativeLayout
            android:id="@+id/quit"
            android:layout_marginTop="30dp"
            style="@style/new_setting_relative_layout_item">

            <TextView
                style="@style/new_setting_grey_text"
                android:drawableLeft="@drawable/icon_quit"
                android:drawableStart="@drawable/icon_quit"
                android:text="@string/quit" />

            <ImageView style="@style/new_setting_img_arrow" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
